mobile menu overflow bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,15 @@
     font-family: 'Poppins', sans-serif;
     
 }
-
+body{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
 html{
+  margin: 0;
+  padding: 0;
+  width: 100%;
   scroll-behavior: smooth;
 }
 
